--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </main>
 
     <footer>
-        &copy; 2024 My Website. All rights reserved.
+        &copy; 2024 API-Get應用及Json資料 All rights reserved.
     </footer>
 </body>
 </html>
